fixed button text alignment, general format clean

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,9 +55,11 @@ code {
     outline: none;
     font-size: 17px;
     border-radius: 2px;
+    position: relative;
 }
 
-.active, .collapsible:hover {
+.active,
+.collapsible:hover {
     background-color: #ff6666;
 }
 
@@ -65,8 +67,10 @@ code {
     content: '\002B';
     color: white;
     font-weight: bold;
-    float: right;
-    margin-left: 5px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .active:after {
@@ -74,13 +78,14 @@ code {
 }
 
 .content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
     border-left: 3px solid #ff6666;
     border-right: 3px solid #ff6666;
     padding-left: 10px;
     padding-right: 10px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
     background-color: #f3f2f2;
     position: relative;
 }
